Closed Bug 215771 Opened 22 years ago Closed 22 years ago

form inputs aren't editable after alert confirmation (eBanka)

Categories

(Core :: DOM: UI Events & Focus Handling, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: aha, Assigned: bryner)

References

()

Details

(Keywords: ecommerce, fixed1.5, regression)

Attachments

(1 file)

2003080704/trunk/W2K Repro: 1. open URL 2. write "123456789123" into KLIENTSKE CISLO form field 3. hit "Autentizacni kod" 4. confirm dialog "Chybne klientske cislo" Actual: I can't get focus on any of form's text input field and next another text value. Expected: Text inputs will be editable. Workaround: Switch to another tab after 4th step. It's regression after 1.4 - N7.1 hasn't problems with this page.
Confirming on 2003080304 WinXP.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Works fine on 2003-07-01-11, but broken on 2003-07-02-08 firebird builds. Quite likely my checkin for bug 53579. I'll investigate.
Assignee: form → bryner
Component: Layout: Form Controls → Event Handling
Keywords: ecommerce
Attached patch patchSplinter Review
I think this should take care of it. The additional checks I added for blur-changing-focus should only apply if the last focused node is still in a document.
Attachment #130140 - Flags: superreview?(roc+moz)
Attachment #130140 - Flags: review?(john)
I put this patch in the 8/20 thunderbird build and can confirm it fixes the mail compose focus issue (214408)
Blocks: 214408
Attachment #130140 - Flags: superreview?(roc+moz) → superreview+
*** Bug 214408 has been marked as a duplicate of this bug. ***
Attachment #130140 - Flags: review?(john) → review+
lets get this in for 1.5 final
Flags: blocking1.5+
Comment on attachment 130140 [details] [diff] [review] patch a=asa (on behalf of drivers) for checkin to Mozilla 1.5
Attachment #130140 - Flags: approval1.5+
checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
I just downloaded and installed Mozilla Thunderbird 0.2a (20030829) the problem (as described in bug 216297 ) still exhibits. (at least, with RH9 and KDE, it does)
I just testd under gnome (just in case), and I still have the same problem there. (both mozilla and thunderbird). At this point I'm not sure if I should reopen this bug or one of the child bugs.
The bug reported here only seemed to show up on Windows; it sounds like maybe you're seeing something else. On the other hand, are you sure the build you got would have this checkin that just happened today?
this patch is not in the linux thunderbird build from this week (8/29). It was only added to the windows build. So that's not a fair comparison point.
I see this bug also on Linux i686 gcc-2.95.3 compiled 1.5b build 2003082822.
wonder whether this is somehow related to this one: #215414 ?
Yes, the recipe given in bug #215414 (press Tab a few times) renders the fields editable again.
Keywords: fixed1.5
Component: Event Handling → User events and focus handling
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: