Fix bug 215771 (form inputs not editable after alert dialog dismissed).  r=jkeiser, sr=roc, a=asa.